@@ -144,7 +144,7 @@ class GzipFile(io.BufferedIOBase):
         non-trivial value.
 
         The new class instance is based on fileobj, which can be a regular
-        file, a StringIO object, or any other object which simulates a file.
+        file, an io.BytesIO object, or any other object which simulates a file.
         It defaults to None, in which case filename is opened to provide
         a file object.
 
